--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
 	<groupId>com.webank.wedatasphere.exchangis</groupId>
 	<artifactId>exchangis</artifactId>
-	<version>${revision}</version>
+	<version>1.1.3-webank</version>
 	<packaging>pom</packaging>
 
 	<name>exchangis</name>
