--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 	<properties>
 		<revision>1.1.3-webank</revision>
 		<dss.version>1.1.2</dss.version>
-		<linkis.version>1.4.0-wds</linkis.version>
-		<linkis.datasource.version>1.4.0-wds</linkis.datasource.version>
+		<linkis.version>1.4.0</linkis.version>
+		<linkis.datasource.version>1.4.0</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
 		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
 		<maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
